20240216:index.php //首頁商品顯示於左側 //大分類與中分類有其對應的商品數量顯示於文字後

--- a/css/css.css
+++ b/css/css.css
@@ -101,6 +101,11 @@ input[type=text],input[type=password]
 {
 	display:none;
 }
+/* +#id 提高權重 */
+#left .s a
+{
+	background-color: rgb(136, 208, 239);
+}
 div.ww:hover > div.s
 {
 	display:block;
