--- a/css/css.css
+++ b/css/css.css
@@ -1,121 +1,179 @@
 @charset "utf-8";
+
 /* CSS Document */
-body
-{
-	font-family:"微軟正黑體";
+body {
+	font-family: "微軟正黑體";
 }
-#main
-{
-	width:1034px;
-	padding:10px;
-	margin:20px auto 20px auto;
-	border:#000 solid 1px;
-	min-height:768px;
+
+#main {
+	width: 1034px;
+	padding: 10px;
+	margin: 20px auto 20px auto;
+	border: #000 solid 1px;
+	min-height: 768px;
 }
-#top a
-{
-	color:#CE631C;
-	text-decoration:none;
+
+#top a {
+	color: #CE631C;
+	text-decoration: none;
 }
-#left
-{
-	display:inline-block;
-	width:20%;
-	padding:2%;
-	min-height:550px;
-	vertical-align:top;
-	border:#000 1px solid;
+
+#left {
+	display: inline-block;
+	width: 20%;
+	padding: 2%;
+	min-height: 550px;
+	vertical-align: top;
+	border: #000 1px solid;
 }
-#left a
-{
-	display:block;
-	padding:20px 5px 20px 5px;
-	text-decoration:none;
-	background:#F4C591;
-	margin:10px auto 10px auto;
-	color:#65350A;
+
+#left a {
+	display: block;
+	padding: 20px 5px 20px 5px;
+	text-decoration: none;
+	background: #F4C591;
+	margin: 10px auto 10px auto;
+	color: #65350A;
 }
-.ct
-{
-	text-align:center;
+
+.ct {
+	text-align: center;
 }
-#right
-{
-	display:inline-block;
-	width:65%;
-	padding:2%;
-	min-height:550px;
-	border:#000 1px solid;
+
+#right {
+	display: inline-block;
+	width: 65%;
+	padding: 2%;
+	/* min-height: 550px; */
+	height: 550px;
+	border: #000 1px solid;
+
+	overflow: auto;
 }
-#bottom
-{
-	height:70px;
-	background-size:cover;
+
+#bottom {
+	height: 70px;
+	background-size: cover;
 }
-.al
-{
-	padding:10px;
-	text-align:center;
+
+.al {
+	padding: 10px;
+	text-align: center;
 }
-.all
-{
-	width:90%;
-	margin:10px auto 10px auto;
+
+.all {
+	width: 90%;
+	margin: 10px auto 10px auto;
 }
-.all td
-{
-	min-width:50px;
-	padding:10px;
+
+.all td {
+	min-width: 50px;
+	padding: 10px;
 }
-.tt
-{
-	background:#EF7429;
+
+.tt {
+	background: #EF7429;
 }
-.tt td
-{
-	background:#EF7429;
+
+.tt td {
+	background: #EF7429;
 }
-.pp
-{
-	background:#EFCA85;
+
+.pp {
+	background: #EFCA85;
 }
-.pp td
-{
-	background:#EFCA85;
+
+.pp td {
+	background: #EFCA85;
 }
-input[type=text],input[type=password],input[type=submit],button,.button,input[type=reset],input[type=button],select，textarea,input[type=number]
-{
-	background:#F3F3F3;
-	border:#CCC 1px solid;
-	border-radius:3px;
-	padding:5px 8px 5px 8px;
-	text-decoration:none;
-	margin:3px;
-	color:#333;
+
+/* index.php 商品簡介 */
+.item {
+	width: 80%;
+	height: 160px;
+	background: #EFCA85;
+	margin: 5px auto;
+	display: flex;
 }
-input[type=text],input[type=password]
-{
-	width:170px;
+
+
+.item .img {
+	width: 33%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: 1px solid white;
 }
-.s
-{
-	display:none;
+
+/* .item div{
+	
+	
+} */
+
+.item .info {
+	width: 65%;
+	border: 1px solid white;
+	border-right: 2px solid white;
 }
+
+.info div {
+	border-bottom: 1px solid white;
+}
+
+.info div:nth-child(4) {
+	border-bottom: 0px;
+}
+
+.pname {
+	border-bottom: 1px solid white;
+}
+
+/* index.php 商品簡介 END  */
+
+
+
+input[type=text],
+input[type=password],
+input[type=submit],
+button,
+.button,
+input[type=reset],
+input[type=button],
+select，textarea,
+input[type=number] {
+	background: #F3F3F3;
+	border: #CCC 1px solid;
+	border-radius: 3px;
+	padding: 5px 8px 5px 8px;
+	text-decoration: none;
+	margin: 3px;
+	color: #333;
+}
+
+input[type=text],
+input[type=password] {
+	width: 170px;
+}
+
+.s {
+	display: none;
+}
+
 /* +#id 提高權重 */
-#left .s a
-{
+#left .s a {
 	background-color: rgb(136, 208, 239);
 }
-div.ww:hover > div.s
-{
-	display:block;
+
+div.ww:hover>div.s {
+	display: block;
 }
-.sb button
-{
-	font-size:12px;
+
+.sb button {
+	font-size: 12px;
 }
 
 
-button,.btn:hover{
-cursor: pointer;
+button,
+.btn:hover {
+	cursor: pointer;
 }
