--- a/css/css.css
+++ b/css/css.css
@@ -22,9 +22,12 @@ body {
 	display: inline-block;
 	width: 20%;
 	padding: 2%;
-	min-height: 550px;
+	/* min-height: 550px; */
+	/* max-height: 600px; */
+	height: 550px;
 	vertical-align: top;
 	border: #000 1px solid;
+	overflow: auto;
 }
 
 #left a {
@@ -45,6 +48,7 @@ body {
 	width: 65%;
 	padding: 2%;
 	/* min-height: 550px; */
+	/* max-height: 600px; */
 	height: 550px;
 	border: #000 1px solid;
 
